--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,7 @@
 {% include base_path %}
 
 <!-- start custom head snippets -->
-
+<meta name="msvalidate.01" content="CD3530E34C6B433CEEFC6F48D0CB92D1" />
 <link rel="apple-touch-icon" sizes="57x57" href="{{ base_path }}/images/apple-touch-icon-57x57.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="60x60" href="{{ base_path }}/images/apple-touch-icon-60x60.png?v=M44lzPylqQ">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ base_path }}/images/apple-touch-icon-72x72.png?v=M44lzPylqQ">
