--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -4,4 +4,4 @@
 -->
 <!-- end custom footer snippets -->
 <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-Total <span id="busuanzi_container_site_pv"></span> views.
+<span id="busuanzi_container_site_pv">Total <span id="busuanzi_value_site_pv"></span>views.</span>
